--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VAVUS AI - Translation & AI for Everyone</title>
-    <meta name="description" content="Experience the future of communication with secure, private AI-powered translation and conversation tools designed for global connectivity." />
-    <meta name="author" content="VAVUS AI" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="VAVUS AI - Translation & AI for Everyone" />
-    <meta property="og:description" content="Experience the future of communication with secure, private AI-powered translation and conversation tools designed for global connectivity." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <title>VAVUS AI – Translation & AI for Everyone</title>
+  <meta name="description" content="Experience the future of communication with secure, private AI-powered translation and conversation tools designed for global connectivity." />
+  <meta name="author" content="VAVUS AI" />
+  <meta name="theme-color" content="#0E1116" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@vavus_ai" />
-    <meta name="twitter:title" content="VAVUS AI - Translation & AI for Everyone" />
-    <meta name="twitter:description" content="Experience the future of communication with secure, private AI-powered translation and conversation tools designed for global connectivity." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <!-- Canonical -->
+  <link rel="canonical" href="https://vavusai.com/" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+  <!-- Favicon / App icons (replace paths with your files if needed) -->
+  <link rel="icon" type="image/svg+xml" href="/images/placeholder.svg" />
+  <link rel="apple-touch-icon" href="/images/placeholder.svg" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="VAVUS AI" />
+  <meta property="og:title" content="VAVUS AI – Translation & AI for Everyone" />
+  <meta property="og:description" content="Experience the future of communication with secure, private AI-powered translation and conversation tools designed for global connectivity." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://vavusai.com/" />
+  <!-- Use your own image hosted on your domain -->
+  <meta property="og:image" content="https://vavusai.com/images/chat-interface.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@vavus_ai" />
+  <meta name="twitter:title" content="VAVUS AI – Translation & AI for Everyone" />
+  <meta name="twitter:description" content="Experience the future of communication with secure, private AI-powered translation and conversation tools designed for global connectivity." />
+  <meta name="twitter:image" content="https://vavusai.com/images/chat-interface.png" />
+
+  <!-- Robots (optional but recommended) -->
+  <meta name="robots" content="index,follow" />
+</head>
