--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
   <meta name="description" content="Experience the future of communication with secure, private AI-powered translation and conversation tools designed for global connectivity." />
   <meta name="author" content="VAVUS AI" />
   <meta name="theme-color" content="#0E1116" />
-
-  <!-- Canonical -->
   <link rel="canonical" href="https://vavusai.com/" />
 
-  <!-- Favicon / App icons (replace paths with your files if needed) -->
-  <link rel="icon" type="image/svg+xml" href="/images/placeholder.svg" />
-  <link rel="apple-touch-icon" href="/images/placeholder.svg" />
+  <!-- Favicon / App icons -->
+  <link rel="icon" type="image/png" href="/images/vavus-og.png" />
+  <link rel="apple-touch-icon" href="/images/vavus-og.png" />
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="VAVUS AI" />
@@ -22,16 +20,21 @@
   <meta property="og:description" content="Experience the future of communication with secure, private AI-powered translation and conversation tools designed for global connectivity." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://vavusai.com/" />
-  <!-- Use your own image hosted on your domain -->
-  <meta property="og:image" content="https://vavusai.com/images/chat-interface.png" />
+  <meta property="og:image" content="https://vavusai.com/images/vavus-og.png" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@vavus_ai" />
   <meta name="twitter:title" content="VAVUS AI – Translation & AI for Everyone" />
   <meta name="twitter:description" content="Experience the future of communication with secure, private AI-powered translation and conversation tools designed for global connectivity." />
-  <meta name="twitter:image" content="https://vavusai.com/images/chat-interface.png" />
+  <meta name="twitter:image" content="https://vavusai.com/images/vavus-og.png" />
 
-  <!-- Robots (optional but recommended) -->
   <meta name="robots" content="index,follow" />
 </head>
+<body>
+<noscript>This app needs JavaScript enabled.</noscript>
+<div id="root"></div>
+<!-- Vite/React bootstrap -->
+<script type="module" src="/src/main.tsx"></script>
+</body>
+</html>
