--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="canonical" href="https://vavusai.com/" />
 
   <!-- Favicon / App icons -->
-  <link rel="icon" type="image/png" href="/images/vavus-og.png" />
-  <link rel="apple-touch-icon" href="/images/vavus-og.png" />
+  <link rel="icon" type="image/png" href="/images/vavus-og.jpg" />
+  <link rel="apple-touch-icon" href="/images/vavus-og.jpg" />
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="VAVUS AI" />
