--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
   <meta name="twitter:image" content="https://vavusai.com/images/vavus-og.png" />
 
   <meta name="robots" content="index,follow" />
+  <!-- Crisp chat -->
+  <script type="text/javascript">
+    window.$crisp = [];
+    window.CRISP_WEBSITE_ID = "adfa2834-0502-4aa3-bf79-d0dc4ee8ff05";
+    (function () {
+      const d = document;
+      const s = d.createElement("script");
+      s.src = "https://client.crisp.chat/l.js";
+      s.async = 1;
+      d.getElementsByTagName("head")[0].appendChild(s);
+    })();
+  </script>
+
 </head>
 <body>
 <noscript>This app needs JavaScript enabled.</noscript>
